# opencv

./: CMakeLists.txt
cmake/: OpenCVDownload.cmake  OpenCVFindLibsGrfmt.cmake  OpenCVFindLibsVideo.cmake  OpenCVFindProtobuf.cmake  OpenCVGenConfig.cmake  OpenCVGenHeaders.cmake  OpenCVModule.cmake
data/: CMakeLists.txt
include/: CMakeLists.txt
modules/core/include/opencv2/core/: cvdef.h
modules/dnn/: CMakeLists.txt
modules/highgui/include/opencv2/highgui/: highgui_winrt.hpp
modules/highgui/src/: window_winrt_bridge.hpp
modules/imgproc/include/opencv2/imgproc/: imgproc_c.h
modules/videoio/: CMakeLists.txt
modules/videoio/src/: cap_ffmpeg.cpp  cap_ffmpeg_api.hpp  cap_ffmpeg_impl.hpp
modules/videoio/src/cap_winrt/: CaptureFrameGrabber.cpp
